# rulinalg

./: .gitignore  .project  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html
benches/: lib.rs
benches/linalg/: cholesky.rs  hessenberg.rs  iter.rs  lu.rs  matrix.rs  norm.rs  permutation.rs  qr.rs  svd.rs  transpose.rs  triangular.rs
doc/: search-index.js
doc/num/: trait.Bounded.html
doc/num_iter/: struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
doc/rulinalg/: MachineEpsilon.t.html  assert_matrix_eq.m.html  index.html  macro.assert_matrix_eq.html  macro.assert_vector_eq!.html  macro.assert_vector_eq.html  macro.matrix.html  macro.vector.html  matrix.m.html  sidebar-items.js  trait.MachineEpsilon.html  trait.Metric.html
examples/: mismatched_elements_overflow.rs  mismatched_f64_elements.rs  mismatched_f64_elements_ulp.rs  mismatched_f64_elements_ulp_signs.rs  mismatched_integer_elements_default.rs  mismatched_integer_elements_exact.rs
src/: convert.rs  epsilon.rs  error.rs  internal_utils.rs  lib.rs  macros.rs  ulp.rs  utils.rs  vector.rs
src/io/: csv.rs  io_csv.rs  mod.rs
src/macros/: assert_matrix_eq.rs  assert_scalar_eq.rs  assert_vector_eq.rs  comparison.rs  matrix.rs  matrix_eq.rs  mod.rs  vector.rs
src/matrix/: decomposition.rs  impl_col_row.rs  impl_conv.rs  impl_mat.rs  impl_ops.rs  impl_permutation_mul.rs  invertible.rs  iter.rs  mat_mul.rs  mod.rs  permutation_matrix.rs  permutation_matrix_mul.rs  slice.rs  transpose.rs
src/norm/: mod.rs
tests/: lib.rs
(+325 files in other folders)
