[package]
name = "rulinalg"
version = "0.3.2"
authors = ["AtheMathmo"]

description = "A linear algebra library."
repository = "https://github.com/AtheMathmo/rulinalg"
documentation = "https://AtheMathmo.github.io/rulinalg/"
keywords = ["linalg","linear","algebra","linear-algebra","matrix"]
readme = "README.md"
license = "MIT"

[dependencies]
num = {version = "0.1.34", default-features = false }
matrixmultiply = "0.1.8"
