[package]
name = "rulinalg"
version = "0.3.6"
authors = ["AtheMathmo"]

description = "A linear algebra library."
repository = "https://github.com/AtheMathmo/rulinalg"
documentation = "https://AtheMathmo.github.io/rulinalg/"
keywords = ["linalg","linear","algebra","linear-algebra","matrix"]
readme = "README.md"
license = "MIT"

[dependencies]
num = {version = "0.1.36", default-features = false }
matrixmultiply = "0.1.8"

[dev-dependencies]
rand = "0.3"
quickcheck = "0.4"
